--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockPaperScissors</title>
+    <script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<p>Let's Play</p>
+<div class="imagecontainer">
+<img src="imgs/icons1.png">
+<img src="imgs/icons2.png">
+<img class ="scissors" src="imgs/icons3.png">
+</div>
+<div class="buttons">
+<button>Rock</button>
+<button>Paper</button>
+<button>Scissors</button>
+</div>
+
 </body>
 </html>
