--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 <img src="imgs/icons2.png">
 <img class ="scissors" src="imgs/icons3.png">
 </div>
-<div class="buttons">
-<button>Rock</button>
-<button>Paper</button>
-<button>Scissors</button>
+<div class="pick">Pick One!
 </div>
-
 </body>
 </html>
