--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="box">
+<div class="box2">
 <p>Let's Play</p>
 <div class="imagecontainer">
 <img src="imgs/icons1.png">
@@ -16,6 +18,8 @@
 <img class ="scissors" src="imgs/icons3.png">
 </div>
 <div class="pick">Pick One!
+</div>
+</div>
 </div>
 </body>
 </html>
