--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box">
+<div class="box">
+    <span></span>
 <div class="box2">
 <p>Let's Play</p>
 <div class="imagecontainer">
-<img src="imgs/icons1.png">
-<img src="imgs/icons2.png">
-<img class ="scissors" src="imgs/icons3.png">
+<img id = "rock" src="imgs/rock.png">
+<img id = "paper" src="imgs/paper.png">
+<img id ="scissors" src="imgs/scissors.png">
 </div>
 <div class="pick">Pick One!
 </div>
